--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -39,10 +39,26 @@ spec:
           ports:
             - containerPort: 80
           env:
+          {{- if .Values.remoteControlPlane.enabled }}
+          - name: KEPTN_CONFIGURATION_SERVICE_API_ENDPOINT
+            value: "{{ .Values.remoteControlPlane.api.protocol }}://{{ .Values.remoteControlPlane.api.hostname }}/api/configuration-service"
+          - name: KEPTN_API_TOKEN
+            value: "{{ .Values.remoteControlPlane.api.token }}"
+          {{- else }}
+          - name: KEPTN_CONFIGURATION_SERVICE_API_ENDPOINT
+            value: "{{ .Values.localControlPlane.configurationServiceApi.protocol }}://{{ .Values.localControlPlane.configurationServiceApi.namespace }}.{{ .Values.localControlPlane.configurationServiceApi.service }}.cluster.local:{{ .Values.localControlPlane.configurationServiceApi.port }}/api"
+          - name: KEPTN_API_TOKEN
+            value: "{{ .Values.localControlPlane.configurationServiceApi.token }}"
+          {{- end }}
           - name: CONFIGURATION_SERVICE
             value: "http://localhost:8081/configuration-service"
           - name: env
             value: 'production'
+          - name: JOB_NAMESPACE
+            valueFrom:
+              configMapKeyRef:
+                name: job-service-config
+                key: job_namespace
           livenessProbe:
             httpGet:
               path: /health
@@ -86,11 +102,6 @@ spec:
             - name: HTTP_SSL_VERIFY
               value: "{{ .Values.remoteControlPlane.api.apiValidateTls | default "true" }}"
             {{- end }}
-            - name: JOB_NAMESPACE
-              valueFrom:
-                configMapKeyRef:
-                  name: job-service-config
-                  key: job_namespace
 
       {{- with .Values.nodeSelector }}
       nodeSelector:
