--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -28,6 +28,7 @@ rules:
       - ""
     resources:
       - "pods"
+      - "pods/log"
       - "persistentvolumeclaims"
       - "jobs"
     verbs:
