--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -40,15 +40,13 @@ spec:
             - containerPort: 80
           env:
           {{- if .Values.remoteControlPlane.enabled }}
-          - name: KEPTN_CONFIGURATION_SERVICE_API_ENDPOINT
+          - name: INIT_CONTAINER_CONFIGURATION_SERVICE_API_ENDPOINT
             value: "{{ .Values.remoteControlPlane.api.protocol }}://{{ .Values.remoteControlPlane.api.hostname }}/api/configuration-service"
           - name: KEPTN_API_TOKEN
             value: "{{ .Values.remoteControlPlane.api.token }}"
           {{- else }}
-          - name: KEPTN_CONFIGURATION_SERVICE_API_ENDPOINT
-            value: "{{ .Values.localControlPlane.configurationServiceApi.protocol }}://{{ .Values.localControlPlane.configurationServiceApi.namespace }}.{{ .Values.localControlPlane.configurationServiceApi.service }}.cluster.local:{{ .Values.localControlPlane.configurationServiceApi.port }}/api"
-          - name: KEPTN_API_TOKEN
-            value: "{{ .Values.localControlPlane.configurationServiceApi.token }}"
+          - name: INIT_CONTAINER_CONFIGURATION_SERVICE_API_ENDPOINT
+            value: "http://configuration-service:8080"
           {{- end }}
           - name: CONFIGURATION_SERVICE
             value: "http://localhost:8081/configuration-service"
