--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -1,23 +1,23 @@
 ---
-# Deployment of our keptn-generic-job-service
+# Deployment of our job-executor-service
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: keptn-generic-job-service
+  name: job-executor-service
   namespace: keptn
 spec:
   selector:
     matchLabels:
-      run: keptn-generic-job-service
+      run: job-executor-service
   replicas: 1
   template:
     metadata:
       labels:
-        run: keptn-generic-job-service
+        run: job-executor-service
     spec:
       containers:
-        - name: keptn-generic-job-service
-          image: didiladi/keptn-generic-job-service:latest
+        - name: job-executor-service
+          image: didiladi/job-executor-service:latest
           ports:
             - containerPort: 8080
           env:
@@ -52,34 +52,34 @@ spec:
               value: 'sh.keptn.>'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
-      serviceAccountName: keptn-generic-job-service
+      serviceAccountName: job-executor-service
 ---
-# Expose keptn-generic-job-service via Port 8080 within the cluster
+# Expose job-executor-service via Port 8080 within the cluster
 apiVersion: v1
 kind: Service
 metadata:
-  name: keptn-generic-job-service
+  name: job-executor-service
   namespace: keptn
   labels:
-    run: keptn-generic-job-service
+    run: job-executor-service
 spec:
   ports:
     - port: 8080
       protocol: TCP
   selector:
-    run: keptn-generic-job-service
+    run: job-executor-service
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: keptn-generic-job-service
+  name: job-executor-service
   namespace: keptn
 ---
 # Role for accessing secrets in the namespace
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: keptn-generic-job-service
+  name: job-executor-service
   namespace: keptn
 rules:
   - apiGroups:
@@ -107,18 +107,18 @@ rules:
     verbs:
       - "*"
 ---
-# Bind role for accessing secrets onto the generic-job-service service account
+# Bind role for accessing secrets onto the job-executor-service service account
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: keptn-generic-job-service
+  name: job-executor-service
   namespace: keptn
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: keptn-generic-job-service
+  name: job-executor-service
 subjects:
   - kind: ServiceAccount
-    name: keptn-generic-job-service
+    name: job-executor-service
     namespace: keptn
 
