--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,15 +1,15 @@
-{{- if .Values.keptnservice.service.enabled -}}
+{{- if .Values.jobexecutorservice.service.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "keptn-service.fullname" . }}
+  name: {{ include "job-executor-service.fullname" . }}
   labels:
-    {{- include "keptn-service.labels" . | nindent 4 }}
+    {{- include "job-executor-service.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
     - port: 8080
       protocol: TCP
   selector:
-    {{- include "keptn-service.selectorLabels" . | nindent 4 }}
+    {{- include "job-executor-service.selectorLabels" . | nindent 4 }}
   {{- end }}
