--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "keptn-service.serviceAccountName" . }}
+  name: {{ include "job-executor-service.serviceAccountName" . }}
   labels:
-    {{- include "keptn-service.labels" . | nindent 4 }}
+    {{- include "job-executor-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
   {{- toYaml . | nindent 4 }}
@@ -13,7 +13,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: keptn-generic-job-service
+  name: job-executor-service
   namespace: {{ .Release.Namespace }}
 rules:
   - apiGroups:
@@ -41,17 +41,17 @@ rules:
     verbs:
       - "*"
 ---
-# Bind role for accessing secrets onto the generic-job-service service account
+# Bind role for accessing secrets onto the job-executor-service service account
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: keptn-generic-job-service
+  name: job-executor-service
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: keptn-generic-job-service
+  name: job-executor-service
 subjects:
   - kind: ServiceAccount
-    name: {{ include "keptn-service.serviceAccountName" . }}
+    name: {{ include "job-executor-service.serviceAccountName" . }}
     namespace: {{ .Release.Namespace }}
